src/index.css
* {
    box-sizing: border-box;
}

body {
    margin: 0;
}

body {
  margin: 0;
  background-color: #0B2434;
}

button {
  cursor: pointer;
}

main {
  margin: 0;
  background-color: #F5F5F5;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  padding: 20px;
  font-family: Karla, sans-serif;

}

.dice-container {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: repeat(2, auto);
  gap: 20px;
}

.dice-container button {
  height: 50px;
  width: 50px;
  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
  border-radius: 10px;
  border: none;
  background-color: white;
  box-shadow: 0px, 2px, 2px, rgba(0, 0, 0, 0.15);
  padding: 0;
}

.dice-container button img {
  width: 100%;
  height: 100%;
  display: block;
  border-radius: 10px;
}

.roll-dice {
  height: 50px;
  width: 150px;
  border: none;
  border-radius: 6px;
  background-color: #5035FF;
  color: white;
  font-size: 1.2rem;
}

@keyframes shake {
  0% { transform: translate(0px, 0px) rotate(0deg); }
  25% { transform: translate(2px, -2px) rotate(-5deg); }
  50% { transform: translate(-2px, 2px) rotate(5deg); }
  75% { transform: translate(2px, 2px) rotate(-3deg); }
  100% { transform: translate(0px, 0px) rotate(0deg); }
}

.shake {
  animation: shake 0.3s;
}

